--- a/leisure/src/main/resources/templates/duvidas.html
+++ b/leisure/src/main/resources/templates/duvidas.html
@@ -10,43 +10,54 @@
 
     <main class="main">
         <section class="duvidas">
-            <div class="duvidas__container__imagem">
-                <img src="/img/imagem/newUser.png" alt="Imagem de pessoas" class="duvidas__container__imagem-conteudo">
-            </div>
+            
             <div class="duvidas__container">
-                <h3 class="titulo__terceiro">Posso criar um anúncio sem realizar um cadastro?</h3>
-                <p class="duvidas__container-texto">R: Não. É essencial que você tenha um cadastro para trabalhar em seu anúncio.</p>
+                <div class="duvidas__container__imagem">
+                    <img src="/img/imagem/newUser.png" alt="Imagem de pessoas" class="duvidas__container__imagem-conteudo">
+                </div>
+                <div class="duvidas__container__conteudo">
+                    <h3 class="titulo__terceiro">Posso criar um anúncio sem realizar um cadastro?</h3>
+                    <p class="duvidas__container-texto">R: Não. É essencial que você tenha um cadastro para trabalhar em seu anúncio.</p>
+                </div>
             </div>
-            <div class="duvidas__container">
+            <div class="duvidas__container row-reverse">
                 <div class="duvidas__container__imagem">
                     <img src="/img/imagem/money.png" alt="Imagem de pessoas" class="duvidas__container__imagem-conteudo">
                 </div>
-                <h3 class="titulo__terceiro">Para anunciar meu imóvel é cobrado algum valor?</h3>
-                <p class="duvidas__container-texto">R: A Leisure não cobra nenhum valor para você anunciar seu imóvel.
-                    Fica opcional do usuário adquirir um pacote.</p>
+                <div class="duvidas__container__conteudo">
+                    <h3 class="titulo__terceiro">Para anunciar meu imóvel é cobrado algum valor?</h3>
+                    <p class="duvidas__container-texto">R: A Leisure não cobra nenhum valor para você anunciar seu imóvel.
+                        Fica opcional do usuário adquirir um pacote.</p>
+                </div>
             </div>
             <div class="duvidas__container">
                 <div class="duvidas__container__imagem">
                     <img src="/img/imagem/megaFone.png" alt="Imagem de pessoas" class="duvidas__container__imagem-conteudo">
                 </div>
-                <h3 class="titulo__terceiro">Por quanto tempo meu anúncio fica no ar?</h3>
-                <p class="duvidas__container-texto">R: O anúncio fica nor ar durante 3 dias e logo após isso será apagado.
-                    Para que seu anúncio permaneca por mais tempo, é necessário adquirir um pacote.</p>
+                <div class="duvidas__container__conteudo">
+                    <h3 class="titulo__terceiro">Por quanto tempo meu anúncio fica no ar?</h3>
+                    <p class="duvidas__container-texto">R: O anúncio fica nor ar durante 3 dias e logo após isso será apagado.
+                        Para que seu anúncio permaneca por mais tempo, é necessário adquirir um pacote.</p>
+                </div>
             </div>
-            <div class="duvidas__container">
+            <div class="duvidas__container row-reverse">
                 <div class="duvidas__container__imagem">
                     <img src="/img/imagem/security.png" alt="Imagem de pessoas" class="duvidas__container__imagem-conteudo">
                 </div>
-                <h3 class="titulo__terceiro">Tenho interesse em um imóvel, mas é confiavél?</h3>
-                <p class="duvidas__container-texto">R: A Leisure trabalha constantemente para aprovar anúncios e evitar fraudes.
-                    Vale salientar que anúncios com valores muito atrativos devem ser tratados com cautela.</p>
+                <div class="duvidas__container__conteudo">
+                    <h3 class="titulo__terceiro">Tenho interesse em um imóvel, mas é confiavél?</h3>
+                    <p class="duvidas__container-texto">R: A Leisure trabalha constantemente para aprovar anúncios e evitar fraudes.
+                        Vale salientar que anúncios com valores muito atrativos devem ser tratados com cautela.</p>
                 </div>
+            </div>
+            <div class="duvidas__container">
                 <div class="duvidas__container__imagem">
                     <img src="/img/imagem/contrato.png" alt="Imagem de pessoas" class="duvidas__container__imagem-conteudo">
                 </div>
-            <div class="duvidas__container">
-                <h3 class="titulo__terceiro">A Leisure faz contratos?</h3>
-                <p class="duvidas__container-texto">R: No momento não trabalhamos com contrato. Nosso objetivo no momento é conectar os usuários que anunciam seus imóveis e usuários que desejam compra-lo.</p>
+                <div class="duvidas__container__conteudo">
+                    <h3 class="titulo__terceiro">A Leisure faz contratos?</h3>
+                    <p class="duvidas__container-texto">R: No momento não trabalhamos com contrato. Nosso objetivo no momento é conectar os usuários que anunciam seus imóveis e usuários que desejam compra-lo.</p>
+                </div>
             </div>
         </section>
     </main>
