--- a/leisure/src/main/resources/templates/fragments/head.html
+++ b/leisure/src/main/resources/templates/fragments/head.html
@@ -34,4 +34,5 @@
     <script src="/script/profile.js" defer></script>
     <script src="/script/botoes.js" defer></script>
     <script src="/script/swiper.js" defer></script>
+    <script src="/script/mascaras.js" defer></script>
 </head>
