Resultado do filtro voltando corretamente, faltando apenas a estilização

--- a/leisure/src/main/resources/templates/fragments/cabecalho.html
+++ b/leisure/src/main/resources/templates/fragments/cabecalho.html
@@ -144,7 +144,7 @@
                                 <input type="password" name="password" id="loginSenha">
                             </div>
                             <div class="modal-body__botoes d-flex flex-column gap-2 justify-content-center">
-                                <button type="submit" class="btn btn-primary">Entrar</button>
+                                <button type="submit" class="btn btn-primary" id="botaoDeLogin">Entrar</button>
                                 <span class="btn-cadastrar">Não tenho cadastro</span>
                             </div>
                         </form>
