--- a/leisure/src/main/resources/templates/fragments/profile.html
+++ b/leisure/src/main/resources/templates/fragments/profile.html
@@ -277,6 +277,9 @@
 </section>
 <div th:if="${imovelPorId.size == 0}">
     <span>Não</span>
+    <div class="anuncio__card__imagem">
+        <img src="/img/anuncio/card/card01.png" alt="Casa a venda">
+    </div>
 </div>
 </th:block>
 
