--- a/leisure/src/main/resources/static/style/style.css
+++ b/leisure/src/main/resources/static/style/style.css
@@ -10,7 +10,7 @@
 @import url('index-carrossel.css');
 @import url('index-como-comprar.css');
 @import url('index-destaques.css');
-@import url('index-fiador.css');
+@import url('index-financiamento.css');
 @import url('index-sobre.css');
 @import url('index-time.css');
 @import url('login-cadastro.css');
