--- a/leisure/src/main/resources/templates/fragments/resultado-pesquisa.html
+++ b/leisure/src/main/resources/templates/fragments/resultado-pesquisa.html
@@ -1,30 +1,32 @@
 <th:block th:fragment="resultado-pesquisa">
-<div th:fragment="resultado-pesquisa" class="resultado__filtro" th:if="${imovelPorId.size != 0}" th:each="imovel : ${imovelPorId}">
-    <div class="resultado__filtro__card">
-        <div class="resultado__filtro__card__conteudo">
-            <div class="resultado__filtro__card__conteudo__imagem">
-                <img src="/img/anuncio/card/card01.png" alt="imagem teste card">
-            </div>
-            <div class="resultado__filtro__card__conteudo__content">
-                <span class="resultado__filtro__card__conteudo__content__item">
-                    <p class="resultado__filtro__card__conteudo__content__item__tipo">Casa</p>
-                </span>
-                <span class="resultado__filtro__card__conteudo__content__item">
-                    <p class="resultado__filtro__card__conteudo__content__item__valor">
-                        <i class="fa-thin fa-brazilian-real-sign fa-lg"></i>
-                            20.000
+    <div th:fragment="resultado-pesquisa" class="resultado__filtro" th:if="${imovelPorId.size != 0}" th:each="imovel : ${imovelPorId}">
+        <div class="resultado__filtro__card">
+            <div class="resultado__filtro__card__conteudo">
+                <div class="resultado__filtro__card__conteudo__imagem">
+                    <img src="/img/anuncio/card/card01.png" alt="imagem teste card">
+                </div>
+                <div class="resultado__filtro__card__conteudo__content">
+                    <span class="resultado__filtro__card__conteudo__content__item">
+                        <p class="resultado__filtro__card__conteudo__content__item__tipo" th:text="${imovel.tipo}"></p>
+                        <p class="resultado__filtro__card__conteudo__content__item__tipo" th:text="${imovel.cidade}"></p>
+                    </span>
+                    <span class="resultado__filtro__card__conteudo__content__item">
+                        <p class="resultado__filtro__card__conteudo__content__item__valor">
+                            <p>R$ <span th:text="${imovel.preco}"></span></p>
                         </p>
-                    </p>
-                </span>
-                <span class="resultado__filtro__card__conteudo__content__item">
-                    <p class="resultado__filtro__card__conteudo__content__item__comodos">
-                        <span>• 2 quartos</span>
-                        <span>• 1 sala</span>   
-                        <span>• 4 vaga</span>
-                    </p>
-                </span>
+                    </span>
+                    <span class="resultado__filtro__card__conteudo__content__item">
+                        <ul class="resultado__filtro__card__conteudo__content__lista">
+                            <li>• <span th:text="${imovel.numQuartos}"></span> quarto</li>
+                            <li>• <span th:text="${imovel.numBanheiros}"></span> banheiro</li>
+                            <li>• <span th:text="${imovel.vagasGaragem}"></span> vaga</li>
+                            <!-- <li>• IPTU R$<span th:text="${imovel.iptu}"></span>,00</li> -->
+                        </ul>
+                        <p class="resultado__filtro__card__conteudo__content__item__comodos">
+                        </p>
+                    </span>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </th:block> 
