--- a/leisure/src/main/resources/templates/index.html
+++ b/leisure/src/main/resources/templates/index.html
@@ -53,17 +53,20 @@
             </div>
         </section>
         
-        <!-- FIADOR -->
-        <section class="sem-fiador" th:fragment="fiador">
-            <div class="sem-fiador__container">
-                <div class="sem-fiador__container-imagem">
+        <!-- FINANCIAMENTO -->
+        <section class="financiamento" th:fragment="fiador">
+            <div class="financiamento__container">
+                <div class="financiamento__container-imagem">
                     <img src="/img/imagem/sem-fiador.svg" alt="...">  
                 </div>
-                <div class="sem-fiador__container__conteudo">
-                    <h2 class="titulo__segundo">Sem complicações e sem fiador</h2>
-                    <p>Sem aquelas burocracias para comprar seu tão sonhado imóvel e também sem a necessidade de um fiador.</p>
+                <div class="financiamento__container__conteudo">
+                    <h2 class="titulo__segundo">O que acha de um financiamento?</h2>
+                    <p>O financiamento é uma das opções para conseguir a tão sonhada casa própria.</p>
+                    <p>Veja abaixo alguns bancos que você pode simular o valor da sua casa</p>
                     <span>
-                        <a class="no-decoration" href="#">Como comprar sem fiador <i class="fa-solid fa-arrow-right"></i></a>
+                        <a class="no-decoration" href="#">Bradesco<i class="fa-solid fa-arrow-right"></i></a>
+                        <a class="no-decoration" href="#">Caixa<i class="fa-solid fa-arrow-right"></i></a>
+                        <a class="no-decoration" href="#">Itaú<i class="fa-solid fa-arrow-right"></i></a>
                     </span>
                 </div>
             </div>
